tests/paczka1/fuzzy1/25065172.err
Error in line 1: x9eKZdm S316 38,7
Error in line 8: ZIw46MM3I5Y S708 53,5
Error in line 14: 3YUYmWIx S808 25,4
Error in line 21: 3YUYmWIx S316 40,8
Error in line 17: 0w8ZcNppki S708 45,7
Error in line 23: ZIw46MM3I5Y S808 34,3
Error in line 28: 0w8ZcNppki S316 41,8
